examples/test/testpolicy13103.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13103
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key48: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value15
          key49: value3
          key18: value42
      podSelector:
        matchLabels:
          key46: value19
